# backend

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-dev.yaml  docker-compose-staging.yaml  docker-compose.yaml  package-lock.json
api/: .flake8  dev.Dockerfile  oldschema.yml  pyproject.toml  schema.yml
api/app/: asgi.py  celery.py  consumers.py  permissions.py  routing.py  serializers.py  urls.py
api/app/settings/: __init__.py  base.py  dev.py  prod.py  staging.py
api/authentication/: signals.py  urls.py  views.py
api/company/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
api/export_handler/: apps.py  serializers.py  urls.py  views.py
api/files/: models.py  urls.py  views.py
api/interview/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
api/interview_templates/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  views.py
api/new_transcription/: apps.py  bot.py  tasks.py  urls.py  utils.py  views.py
api/openai_helper/: utils.py
api/question/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
api/question_response/: 0009_alter_interviewerfeedback_template_question.py  admin.py  models.py  serializers.py  urls.py  views.py
api/scripts/: dev-start.sh  manage_seed_data.sh  prod-start.sh  runserver.sh  start.sh
api/summary/: models.py  serializers.py  urls.py  views.py
api/transcription/: models.py  urls.py  views.py
api/user/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
api/videosdk/: urls.py  views.py
(+702 files in other folders)
